[dependencies]
secp256k1 = { version = "0.27", features = ["schnorr", "rand-std"] }
rand = "0.8"
sha2 = "0.10"
zeroize = { version = "1.6", features = ["zeroize_derive"] }
thiserror = "1.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
vsss-rs = "0.2"  # For verifiable secret sharing

[dev-dependencies]
criterion = "0.5"
proptest = "1.2"
