[package]
name = "frost-threshold-sig"
version = "0.1.0"
edition = "2021"
description = "FROST Threshold Signature Scheme for Bitcoin Taproot"
readme = "README.md"
keywords = ["bitcoin", "taproot", "frost", "threshold", "signature"]
categories = ["cryptography", "blockchain"]
repository = "https://github.com/mensah-frost-threshold-sig/frost-threshold-sig"
license = "MIT OR Apache-2.0"
authors = ["Your Name <you@example.com>"]

[dependencies]
secp256k1 = { version = "0.27", features = ["rand-std"] }
rand = "0.8"
sha2 = "0.10"
zeroize = { version = "1.6", features = ["zeroize_derive"] }
thiserror = "1.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
vsss-rs = "5.2"  # For verifiable secret sharing

[dev-dependencies]
criterion = "0.5"
proptest = "1.2"
